Source/WebCore/platform/ios/AbstractPasteboard.h
@@ -44,7 +44,7 @@ NS_ASSUME_NONNULL_BEGIN
 - (void)setItems:(NSArray<NSDictionary *> *)items;
 - (NSArray<NSString *> *)pasteboardTypesByFidelityForItemAtIndex:(NSUInteger)index;
 @property (readonly, nonatomic) NSInteger numberOfFiles;
-@property (readonly, nonatomic) NSArray<NSURL *> *filenamesForDataInteraction;
+@property (readonly, nonatomic) NSArray<NSURL *> *fileURLsForDataInteraction;
 
 @end
 
